--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "@angular/common": "^15.1.0",
     "@angular/compiler": "^15.1.0",
     "@angular/core": "^15.1.0",
+    "@angular/fire": "^7.5.0",
+    "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^15.1.0",
     "@angular/material": "^15.1.3",
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
     "@ngrx/store": "^15.2.1",
+    "component": "^1.1.0",
+    "firebase": "^9.17.1",
     "httpclient": "^0.1.0",
     "rxjs": "~7.8.0",
     "todomvc-app-css": "^2.4.2",
