all function done
all function done with commenting, upload to cloud in progress

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_USER='postgres'
+DB_USER='trans-proposal-377110:us-central1:postgres'
 DB_PASSWORD='1234'
-DB_HOST='localhost'
+DB_HOST='104.198.248.229'
 DB_PORT='5432'
 DB_DATABASE='todomvc'
